mobile sized -- wrapped fixed

--- a/style.css
+++ b/style.css
@@ -24,4 +24,5 @@ ul{
 }
 .grid{
   display: flex;
+  flex-wrap: wrap;
 }
